# Md_ParquetMerger

./: README.md  pyproject.toml
ParquetMerger/: __init__.py  merger.py
data/input/: client.parquet  client_2.parquet  client_info.parquet  createData.py
data/output/: output.parquet
test/: testMerger.py
